@@ -11,7 +11,7 @@
 	</PROPS>
 	<RULES ESCAPE="\" IGNORE_CASE="FALSE" HIGHLIGHT_DIGITS="TRUE">
 		<!-- B style comment -->
-		<SPAN TYPE="COMMENT2">
+		<SPAN TYPE="COMMENT3">
 			<BEGIN>/*?</BEGIN>
 			<END>?*/</END>
 		</SPAN>
@@ -31,7 +31,7 @@
 		</SPAN>
 
 		
-		<EOL_SPAN TYPE="COMMENT1">//</EOL_SPAN>
+		<EOL_SPAN TYPE="COMMENT2">//</EOL_SPAN>
 		<SEQ TYPE="OPERATOR">!</SEQ>
 		<SEQ TYPE="OPERATOR">#</SEQ>
 		<SEQ TYPE="OPERATOR">$0</SEQ>
