@@ -41,7 +41,7 @@
 		<!-- preprocessor statements -->
 		<EOL_SPAN TYPE="KEYWORD2" DELEGATE="CPP">#</EOL_SPAN>
 
-		<EOL_SPAN TYPE="COMMENT1">//</EOL_SPAN>
+		<EOL_SPAN TYPE="COMMENT2">//</EOL_SPAN>
 		<SEQ TYPE="OPERATOR">=</SEQ>
 		<SEQ TYPE="OPERATOR">!</SEQ>
 		<SEQ TYPE="OPERATOR">&gt;=</SEQ>
