@@ -47,7 +47,7 @@
                 <!-- Function calls -->
                 <MARK_PREVIOUS TYPE="FUNCTION" EXCLUDE_MATCH="TRUE">(</MARK_PREVIOUS>
 
-                <EOL_SPAN TYPE="COMMENT1">//</EOL_SPAN>
+                <EOL_SPAN TYPE="COMMENT2">//</EOL_SPAN>
 
                 <KEYWORDS>
 
